  * Do not abort when traversing symlinks to directories in dpkg-scanpackages
    and dpkg-scansources. Closes: #809219
  * Implement delete operator with size argument in dselect, required by the
    C++14 spec when the size-less delete operator is defined.
  * Use EACCES instead of EWOULDBLOCK for fcntl(2) F_SETLK in dselect.
  * Print the archive filename when dpkg cannot access it.
  * Perl modules:
    - Add new CTRL_REPO_RELEASE control block type to Dpkg::Control.
    - Add new CTRL_COPYRIGHT_HEADER, CTRL_COPYRIGHT_FILES and
      CTRL_COPYRIGHT_LICENSE control block types to Dpkg::Control.
    - Make patching a file multiple times fatal for the first quilt patch in
      Dpkg::Source. Reported by Apollon Oikonomopoulos <apoikos@debian.org>.
      Closes: #810720
    - Only warn once when a diff patches a file multiple times in
      Dpkg::Source::Patch, and fix the warning message to make it clear that
      the diff might be patchig the file more than once, not just twice.
  * Documentation:
    - Say value instead of option in deb-control(5).
    - Mark debian changelog format in bold in dpkg-parsechangelog(1).
    - Add references to man pages describing file formats.
    - Document missing Install-Size, Built-For-Profiles and Build-Profiles
      fields in man pages.
    - Add new dsc(5), deb-changelog(5) and deb-changes(5) man pages.
    - Remove Debian specific policy references.
    - Remove superfluous SEE ALSO references from dpkg-source(1).
    - Fix --remove and --purge summary formatting in dpkg(1).
    - Move --audit description just after --verify in dpkg(1).
    - Mark Maintainer field as bold in deb-src-control(5).
    - Fix reference to --record-avail instead of inexistent --avail.
    - Add missing quotes in man pages.
    - Document Source field version in deb-control(5).
    - Add new deb822(5) man page.
    - Document and improve C/C++ programs exit codes in man pages.

  [ Updated programs translations ]