@@ -8,6 +8,8 @@ dpkg (1.18.5) UNRELEASED; urgency=medium
     C++14 spec when the size-less delete operator is defined.
   * Use EACCES instead of EWOULDBLOCK for fcntl(2) F_SETLK in dselect.
   * Print the archive filename when dpkg cannot access it.
+  * Check that all passed archive filenames to dpkg exist before queueing them.
+    Closes: #809963
   * Perl modules:
     - Add new CTRL_REPO_RELEASE control block type to Dpkg::Control.
     - Add new CTRL_COPYRIGHT_HEADER, CTRL_COPYRIGHT_FILES and
